<resources>
    <string name="app_name">MonsterAndCie</string>
    <string name="press_logo">Touch the screen to enter</string>
    <string name="elementType"></string>
    <string name="textLife">Life</string>
    <string name="textPower">Power</string>
    <string name="textStamina">Stamina</string>
    <string name="textSpeed">Speed</string>
    <string name="stats">STATISTIQUES :</string>
    <string name="levelText">LEVEL</string>
    <string name="mainBackPressedMessage">Press the back button once again to close the application.</string>
    <string name="title_activity_view_pager_fragment">ViewPagerFragment</string>
</resources>
