<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.heroesofmightandmagic.www.monsterandcie.DetailsActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/monsterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="Monster Name"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/evolutionLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Level"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/elementTypeLogo"
        android:layout_marginLeft="57dp"
        app:layout_constraintTop_toTopOf="@+id/elementTypeLogo"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/elementTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="@string/elementType"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/elementTypeLogo"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/elementTypeLogo" />

    <ImageView
        android:id="@+id/characterLevelImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="center"
        android:layout_row="1"
        android:src="@drawable/arch_knight_egg"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/monsterName"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/monsterName" />

    <ImageView
        android:id="@+id/elementTypeLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="center"
        android:layout_row="1"
        android:src="@drawable/earth_logo"
        app:layout_constraintLeft_toRightOf="@+id/monsterName"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/monsterName"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/statsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="30dp"
        android:text="@string/stats"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/characterLevelImage"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/characterLevelImage" />

    <ImageView
        android:id="@+id/speedLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="center"
        android:layout_row="2"
        android:src="@drawable/stat_speed"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/statsLabel"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/statsLabel" />

    <ImageView
        android:id="@+id/powerLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="center"
        android:layout_row="0"
        android:src="@drawable/stat_power"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/speedLogo"
        android:layout_marginLeft="-8dp"
        app:layout_constraintLeft_toLeftOf="@+id/speedLogo" />

    <ImageView
        android:id="@+id/staminaLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="center"
        android:layout_row="3"
        android:src="@drawable/stat_stamina"
        app:layout_constraintTop_toTopOf="@+id/powerLogo"
        android:layout_marginTop="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/powerLevelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="22"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/powerLogo"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/powerLogo"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/staminaLevelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="center"
        android:layout_row="3"
        android:text="22"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/powerLevelLabel"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/powerLevelLabel"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/staminaLogo"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.992" />

    <ImageView
        android:id="@+id/lifeLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="center"
        android:layout_row="1"
        android:src="@drawable/stat_life"
        app:layout_constraintTop_toTopOf="@+id/speedLogo"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/speedLogo"
        android:layout_marginLeft="208dp" />

    <TextView
        android:id="@+id/speedLevelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="center"
        android:layout_row="2"
        android:text="22"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/speedLogo"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/speedLogo"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/lifeLevelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="center"
        android:layout_row="1"
        android:text="22"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/speedLevelLabel"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/speedLevelLabel"
        android:layout_marginLeft="120dp" />

    <ImageView
        android:id="@+id/evolImage1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_weight="1"
        android:src="@drawable/arch_knight_egg"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/powerLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.452"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/evolImage2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:paddingRight="10dp"
        android:layout_weight="0"
        android:src="@drawable/arch_knight_evol3"
        app:layout_constraintTop_toTopOf="@+id/evolImage1"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/evolImage3"
        android:layout_marginLeft="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/evolImage1"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/evolImage3"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_weight="1"
        android:src="@drawable/arch_knight_evol2"
        app:layout_constraintLeft_toRightOf="@+id/evolImage1"
        android:layout_marginLeft="-2dp"
        app:layout_constraintBottom_toBottomOf="@+id/evolImage1"
        android:layout_marginBottom="8dp" />

    <NumberPicker
        android:id="@+id/levelPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/evolutionLevel"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/evolutionLevel" />

    <TextView
        android:id="@+id/textSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSpeed"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/speedLevelLabel"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/speedLevelLabel" />

    <TextView
        android:id="@+id/textLife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textLife"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lifeLevelLabel"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/lifeLevelLabel" />

    <TextView
        android:id="@+id/textPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textPower"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/powerLevelLabel"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/powerLevelLabel" />

    <TextView
        android:id="@+id/textStamina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textStamina"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/staminaLevelLabel"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/staminaLevelLabel" />

</android.support.constraint.ConstraintLayout>
